Update naming details
